No longer read model files each time you spawn an item display